* PHOTOS+ UPLOAD
* INLINE PHOTOS
* UPLOAD PHOTOS TO DROPBOX?
* QUOTES FROM TEXT SELECTION
* SEARCH GOOGLE BY TEXT SELECTION
-->

$ 5.1.2
% v 5.1.2
_ Mar 7, 2015
* Slight performance improvement when writing stats. Will be noticed throughout app
* Bug Fix: Font size preference fixes all over the app
* Bug Fix: Some preferences not taking effect immediately
* Bug Fix: Per day calculation in stats

$ 5.1.1
% v 5.1.1
_ Mar 6, 2015
* Your local stats will wipe with this update
* Can opt out of stats
* Time/day for time in app stat
* Bug Fix: Stats with max display had serious bug
* Bug Fix: Lime case sensitivity related bug
* Bug Fix: Local stats were not kept separate for different users
* Bug Fix: ChattyPics standalone upload app was not obliterating file names

$ 5.1.0
% v 5.1.0
_ Mar 3, 2015
* User stats, synced to the cloud between all devices
* Notification settings easier to get to
* More material dialogs
* Easter egg
* the man with the briefcase gets a briefcase icon
* Click taglines for new taglines
* Slidey animation
* Now injecting mobile-friendly CSS into frontpage viewer for faster loading
* Bug Fix: highlighted app menu section when notifications disabled
* Bug Fix: Statusbar color on lollipop
* Bug Fix: Saved searches location on app menu

$ 5.0.2
% v 5.0.2
_ Feb 21, 2015
* Basic themes, more to come in future
* Added Chatty.pics support
* Tweaked golden lime
* Bug Fix: Reload threads button now brings back to top

$ 5.0.1
% v 5.0.1
_ Feb 18, 2015
* Bug Fix: Rare bug where messages never load due to faulty regex
* Bug Fix: Reload threads doesn't warp to top
* Bug Fix: Weird transparency issue

$ 5.0.0
% v 5.0.0
_ Feb 13, 2015
* Material Design
* New visuals, icons, colors, and layouts
* Frontpage section
* Redesigned preferences
* More taglines
* Gold Limes for big spender donators
* Preferences are finally a fragment instead of an activity
* Increased max resolution and quality of camera uploads
* Removed analytics
* Crash fixes