@@ -35,6 +35,7 @@ _ Mar 7, 2015
 * Bug Fix: Font size preference fixes all over the app
 * Bug Fix: Some preferences not taking effect immediately
 * Bug Fix: Per day calculation in stats
+* Bug Fix: Shackmessage prompt dialogs
 
 $ 5.1.1
 % v 5.1.1
